updated at: 2020-03-10 02:49, 姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH

--- a/VRChat/77/1204377.html
+++ b/VRChat/77/1204377.html
@@ -7,7 +7,7 @@
       BOOTH
     </title>
     <meta name="description" content=
-    "『王立高校に通うお姫様』をモチーフとしたオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the motif &quot;Princess going to">
+    "『王立高校に通うお姫様』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the concept of &quot;Princess going">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1204377">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
     <meta name="twitter:description" content=
-    "『王立高校に通うお姫様』をモチーフとしたオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the motif &quot;Princess going to">
+    "『王立高校に通うお姫様』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the concept of &quot;Princess going">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1204377/1b0e76bd-62ce-48af-8ce9-35af49b2eb28_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
     <meta property="og:description" content=
-    "『王立高校に通うお姫様』をモチーフとしたオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the motif &quot;Princess going to">
+    "『王立高校に通うお姫様』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the concept of &quot;Princess going">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1204377/1b0e76bd-62ce-48af-8ce9-35af49b2eb28_base_resized.jpg">
     <meta property="og:url" content=
@@ -332,7 +332,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            『王立高校に通うお姫様』をモチーフとしたオリジナル3Dモデルです。
+                            『王立高校に通うお姫様』がコンセプトのオリジナル3Dモデルです。
                             SNS推奨ハッシュタグ: #PrincessThila
                             ⚠Unitypackageインポート前に⚠
                             事前に以下のAssetsをプロジェクト内にインポートしておいてください。
@@ -340,10 +340,10 @@
                             ℹVRChatへのアバターアップロード手順：
                             https://www.pixiv.net/fanbox/creator/17346029/post/572964
                             - - - It is an original 3D model with
-                            the motif "Princess going to Royal High
-                            School" Recommended hashtag for SNS:
-                            #PrincessThila ⚠Required asset⚠ You
-                            need these assets. ・Arktoon-Shaders
+                            the concept of "Princess going to Royal
+                            High School" Recommended hashtag for
+                            SNS: #PrincessThila ⚠Required asset⚠
+                            You need these assets. ・Arktoon-Shaders
                             ・DynamicBone ℹHow to upload an avatar
                             to vrchat (Japanese):
                             https://www.pixiv.net/fanbox/creator/17346029/post/572964
@@ -383,11 +383,44 @@
                             "search-guide-tablet" data-tracking=
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E5%A5%B3%E5%AD%90%E9%AB%98%E7%94%9F">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                女子高生
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
                             href="https://booth.pm/ja/search/3DCG">
                             <div class="search-guide-tablet-label">
                               <div class=
                               "search-guide-tablet-label-inner">
                                 3DCG
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%83%97%E3%83%AA%E3%83%B3%E3%82%BB%E3%82%B9">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                プリンセス
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%81%8A%E5%A7%AB%E6%A7%98">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                お姫様
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
@@ -405,11 +438,11 @@
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
-                            "https://booth.pm/ja/search/Unity">
+                            "https://booth.pm/ja/search/3D%E3%82%AD%E3%83%A3%E3%83%A9%E3%82%AF%E3%82%BF%E3%83%BC">
                             <div class="search-guide-tablet-label">
                               <div class=
                               "search-guide-tablet-label-inner">
-                                Unity
+                                3Dキャラクター
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
@@ -421,17 +454,6 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 女子高校生
-                              </div>
-                            </div></a><a class=
-                            "search-guide-tablet" data-tracking=
-                            "click" data-product-list=
-                            "from market_show via tag_list to search_index"
-                            href=
-                            "https://booth.pm/ja/search/3D%E3%83%A2%E3%83%87%E3%83%AB">
-                            <div class="search-guide-tablet-label">
-                              <div class=
-                              "search-guide-tablet-label-inner">
-                                3Dモデル
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
@@ -464,6 +486,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 VRChat
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/Unitypackage">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                Unitypackage
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
