updated at: 2020-03-11 15:40, [VRChat] Particle Animation MusicSword - Ghost Ship - Not Good - BOOTH

--- a/VRChat/02/1170002.html
+++ b/VRChat/02/1170002.html
@@ -248,7 +248,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/NRtHrxQTW1c"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -257,7 +258,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/0fSF8eFwpC4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
