updated at: 2020-03-11 15:51, VRChat (Schwi | シュヴィ) / Blender (v4) - codealdnoah - BOOTH

--- a/VRChat/53/1161853.html
+++ b/VRChat/53/1161853.html
@@ -248,7 +248,8 @@
                             <iframe width="640" height="480" src=
                             "https://www.youtube.com/embed/fsu5T-7F0C8"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
