--- a/VRChat/78/1161778.html
+++ b/VRChat/78/1161778.html
@@ -227,7 +227,9 @@
                             "allowfullscreen" src=
                             "https://www.youtube.com/embed/4Zrtu9oCvpY?ecver=1&amp;iv_load_policy=1&amp;yt:stretch=16:9&amp;autohide=1&amp;color=red&amp;width=560&amp;width=560"
                             width="560" height="315" frameborder=
-                            "0"></iframe>
+                            "0" sandbox=
+                            "allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
