--- a/VRChat/50/1157350.html
+++ b/VRChat/50/1157350.html
@@ -312,7 +312,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/gE76PqI7r7Q"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
