--- a/VRChat/52/1358552.html
+++ b/VRChat/52/1358552.html
@@ -225,7 +225,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/E_rB77ooRi0"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
