updated at: 2020-03-11 16:18, 【無料】PartyGlass - パリピグラス - S.WORKS - BOOTH

--- a/VRChat/86/1354186.html
+++ b/VRChat/86/1354186.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/a68e6485-c59e-4266-8900-aa6c6e2b5680/i/1354186/2d24265a-9abc-40af-817f-42231ea54c90_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1354186">
+    <meta name="ga:shop" content="UA-160298840-1">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
