updated at: 2020-03-11 16:23, [VRChat] Particle Animation MusicBox - Satellite - Not Good at - BOOTH

--- a/VRChat/82/1151682.html
+++ b/VRChat/82/1151682.html
@@ -248,7 +248,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/pkVy0dixw0U"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -257,7 +258,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/vX9-C4JP0Gc"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
