--- a/VRChat/22/1150722.html
+++ b/VRChat/22/1150722.html
@@ -248,7 +248,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/IHkk8Ttnn70"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
