--- a/VRChat/64/1145164.html
+++ b/VRChat/64/1145164.html
@@ -300,7 +300,8 @@
                             <iframe width="1280" height="720" src=
                             "https://www.youtube.com/embed/atUbpuUJL8M"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
