updated at: 2020-03-11 16:42, エンジニア・クレア/ VRChat対応3Dモデル - 満天星躑躅だよ - BOOTH

--- a/VRChat/73/1139773.html
+++ b/VRChat/73/1139773.html
@@ -260,7 +260,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/_uHVH-67T2g"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
