--- a/VRChat/92/1124392.html
+++ b/VRChat/92/1124392.html
@@ -231,7 +231,8 @@
                             <iframe width="480" height="270" src=
                             "https://www.youtube.com/embed/BV1jcMzLndQ"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -240,7 +241,8 @@
                             <iframe width="640" height="360" src=
                             "https://www.youtube.com/embed/mU0PgjL5nJc"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -249,7 +251,8 @@
                             <iframe width="640" height="360" src=
                             "https://www.youtube.com/embed/-IkpmOvaDvo"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
