--- a/VRChat/51/1140551.html
+++ b/VRChat/51/1140551.html
@@ -228,7 +228,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/VwCiVwfcZIQ"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -237,7 +238,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/9gUkEZx5P0M"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
