--- a/VRChat/11/1138311.html
+++ b/VRChat/11/1138311.html
@@ -326,7 +326,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/zEOFQa15PgY"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
