updated at: 2020-03-11 16:57, Goblin Slayer VRchat+FBX / ゴブリンスレイヤーVRチャット+ FBX - nikkytae - BOOTH

--- a/VRChat/43/1137143.html
+++ b/VRChat/43/1137143.html
@@ -247,7 +247,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/6xZj3-ChTzY"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -256,7 +257,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/HXWmBctgATA"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
