--- a/VRChat/92/1120492.html
+++ b/VRChat/92/1120492.html
@@ -230,7 +230,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/7Sf0n579fWQ"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
