updated at: 2020-03-11 17:30, テレポートエフェクトシェーダー【VRC想定】 - ほたての貝殻 - BOOTH

--- a/VRChat/14/1116714.html
+++ b/VRChat/14/1116714.html
@@ -299,7 +299,8 @@
                             <iframe width="785" height="442" src=
                             "https://www.youtube.com/embed/jhi9h2RUoF8"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
