--- a/VRChat/24/1111224.html
+++ b/VRChat/24/1111224.html
@@ -260,7 +260,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/z6WTztle3w4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
