--- a/VRChat/09/1102309.html
+++ b/VRChat/09/1102309.html
@@ -259,7 +259,8 @@
                             <iframe width="640" height="360" src=
                             "https://www.youtube.com/embed/HkfUO-k4evs"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -268,7 +269,8 @@
                             <iframe width="640" height="360" src=
                             "https://www.youtube.com/embed/k_OoNeOB1JA"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
