--- a/VRChat/03/1096903.html
+++ b/VRChat/03/1096903.html
@@ -246,7 +246,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/A2rX5G_9__Q"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
