--- a/VRChat/33/1093533.html
+++ b/VRChat/33/1093533.html
@@ -300,7 +300,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/3iiGQ1exQLo"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -309,7 +310,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/oCysxgmmvWY"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
