--- a/VRChat/57/1086957.html
+++ b/VRChat/57/1086957.html
@@ -245,7 +245,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/yTK9j9Iyi8s"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -254,7 +255,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/lkuisDKKCC8"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
