--- a/VRChat/62/1083562.html
+++ b/VRChat/62/1083562.html
@@ -244,7 +244,9 @@
                             <iframe src=
                             "https://www.youtube.com/embed/PAcg7uGxHwQ?ecver=2"
                             width="480" height="360" frameborder=
-                            "0" allowfullscreen></iframe>
+                            "0" allowfullscreen sandbox=
+                            "allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
