updated at: 2020-03-11 18:08, あたご型護衛艦 汎用3Dモデル (fbx/mqo/ソース付きVRChat対応) - BitPBX (さどきん) - BOOTH

--- a/VRChat/62/1083362.html
+++ b/VRChat/62/1083362.html
@@ -257,7 +257,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/LU14Fr2wfyg"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
