--- a/VRChat/93/1074593.html
+++ b/VRChat/93/1074593.html
@@ -257,7 +257,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/24kRnfpBShc"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -266,7 +267,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/-KneFsuAeDM"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
