--- a/VRChat/89/1335489.html
+++ b/VRChat/89/1335489.html
@@ -248,7 +248,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/T-mkj1xRtUw"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
