updated at: 2020-03-11 18:48, VRChat用 Emote詰め合わせ (無料版) - アンテナショップ【ねここや】 - BOOTH

--- a/VRChat/89/1065089.html
+++ b/VRChat/89/1065089.html
@@ -286,7 +286,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/riaay9qTpls"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -295,7 +296,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/E8Qfao4PYwY"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
