updated at: 2020-03-11 18:50, AnimationTimeController 音にあわせてアニメーションを調整 - おきゅまーと - BOOTH

--- a/VRChat/64/1064964.html
+++ b/VRChat/64/1064964.html
@@ -232,7 +232,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/SrPBRX9oloo?start=295"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -241,7 +242,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/FEvZIw5t6Pw?start=4662"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
