updated at: 2020-03-11 18:55, 自律型集積回路/ME555N - 切手工匠改めデルタラボ - BOOTH

--- a/VRChat/91/1382991.html
+++ b/VRChat/91/1382991.html
@@ -245,7 +245,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/3wicvJRfd60"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -254,7 +255,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/WOdMrokYKZo"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -263,7 +265,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/HYswOMFRffE"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -272,7 +275,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/Sgy3UwyduJI"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -281,7 +285,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/jhJGUSoBnY4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
