--- a/VRChat/60/1057060.html
+++ b/VRChat/60/1057060.html
@@ -253,7 +253,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/3QS7oAwk-B8"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
