updated at: 2020-03-11 19:18, 【VRChat向け】「心音」46音オールインワンパック - 1619Hz - BOOTH

--- a/VRChat/93/1052193.html
+++ b/VRChat/93/1052193.html
@@ -229,7 +229,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/bj4KhqxmU8c"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -238,7 +239,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/4Azp_CAbsQ4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -247,7 +249,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/FukCX73kT88"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
