--- a/VRChat/38/1037538.html
+++ b/VRChat/38/1037538.html
@@ -259,7 +259,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/Idqi_1okVp4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
