--- a/VRChat/93/1036493.html
+++ b/VRChat/93/1036493.html
@@ -256,7 +256,8 @@
                             <iframe width="560" height="420" src=
                             "https://www.youtube.com/embed/hqzO7TI-5WE"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
