--- a/VRChat/51/1352551.html
+++ b/VRChat/51/1352551.html
@@ -311,7 +311,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/v8ogX_Rl4mY"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
