updated at: 2020-03-11 19:52, N015 おとウフ式　えみゅーん（VMC公認応援キャラクター）人形 v1.0.2 - OToFu Bijyu - BOOTH

--- a/VRChat/92/1345792.html
+++ b/VRChat/92/1345792.html
@@ -301,7 +301,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/l6DQfQlLMw4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
