--- a/VRChat/87/1336287.html
+++ b/VRChat/87/1336287.html
@@ -299,7 +299,8 @@
                             <iframe width="480" height="270" src=
                             "https://www.youtube.com/embed/o6V1EzxejjE"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
