--- a/VRChat/82/1025582.html
+++ b/VRChat/82/1025582.html
@@ -246,7 +246,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/FWeANr_Hc64?rel=0"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
