--- a/VRChat/27/1021527.html
+++ b/VRChat/27/1021527.html
@@ -244,7 +244,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/YlTI6AxAhrE"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
