--- a/VRChat/72/1021472.html
+++ b/VRChat/72/1021472.html
@@ -245,7 +245,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/_wr7Tn4R0Is"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
