--- a/VRChat/04/990104.html
+++ b/VRChat/04/990104.html
@@ -244,7 +244,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/nop2BL-JHBs"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
