--- a/VRChat/72/986272.html
+++ b/VRChat/72/986272.html
@@ -242,7 +242,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/1DP0kgLL3y4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
