--- a/VRChat/10/982510.html
+++ b/VRChat/10/982510.html
@@ -229,7 +229,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/eiE39d1nIqc"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
