--- a/VRChat/89/974589.html
+++ b/VRChat/89/974589.html
@@ -314,7 +314,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/4_DyEhIvlEM"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
