updated at: 2020-03-11 22:01, Fireworks Pack For VRChat（ver 1.1） - 海洋温泉 鯨水荘 - BOOTH

--- a/VRChat/82/957082.html
+++ b/VRChat/82/957082.html
@@ -246,7 +246,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/YtNxMUF_S_M"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
