--- a/VRChat/13/951813.html
+++ b/VRChat/13/951813.html
@@ -322,7 +322,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/IVmig1Sh0_A"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
