--- a/VRChat/35/950735.html
+++ b/VRChat/35/950735.html
@@ -259,7 +259,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/gy40NF2jhDo"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
