--- a/VRChat/15/943415.html
+++ b/VRChat/15/943415.html
@@ -260,7 +260,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/No3O8NtzUY8"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
