updated at: 2020-03-11 22:21, VRChat用ふわー+ずぽっアニメーション - Atreides System - BOOTH

--- a/VRChat/52/942252.html
+++ b/VRChat/52/942252.html
@@ -249,7 +249,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/EYuAUXW3imM"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -258,7 +259,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/4wkNpUCqHCQ"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
