--- a/VRChat/06/936706.html
+++ b/VRChat/06/936706.html
@@ -249,7 +249,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/Z3OykqIWc6w"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
