--- a/VRChat/64/935164.html
+++ b/VRChat/64/935164.html
@@ -249,7 +249,8 @@
                             <iframe width="640" height="360" src=
                             "https://www.youtube.com/embed/Ua3hFwaGGBU"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -258,7 +259,8 @@
                             <iframe width="854" height="480" src=
                             "https://www.youtube.com/embed/-XM-FEUrZ58"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
