--- a/VRChat/91/935391.html
+++ b/VRChat/91/935391.html
@@ -247,7 +247,8 @@
                             <iframe width="480" height="270" src=
                             "https://www.youtube.com/embed/Ua3hFwaGGBU"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
