--- a/VRChat/29/930129.html
+++ b/VRChat/29/930129.html
@@ -247,7 +247,8 @@
                             <iframe width="640" height="360" src=
                             "https://www.youtube.com/embed/Ua3hFwaGGBU"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
