updated at: 2020-03-11 22:37, 【△100】100ポリゴン ロードコーン ＆ △100ポリゴン コーンバー カラーバリエーション11色セット - BOOTH

--- a/VRChat/33/926533.html
+++ b/VRChat/33/926533.html
@@ -250,7 +250,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/k-lHFeqwkgc?rel=0&amp;start=5"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
