--- a/VRChat/55/894455.html
+++ b/VRChat/55/894455.html
@@ -247,7 +247,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/qS0QLXoSPPY?rel=0"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
