--- a/VRChat/13/889513.html
+++ b/VRChat/13/889513.html
@@ -247,7 +247,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/_1RiAbYKPBE?rel=0&amp;showinfo=0"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
