updated at: 2020-03-11 22:59, DesktopWalker - ほたての貝殻 - BOOTH

--- a/VRChat/00/1332100.html
+++ b/VRChat/00/1332100.html
@@ -298,7 +298,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/BTnY9sbMLx4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
