--- a/VRChat/34/1330734.html
+++ b/VRChat/34/1330734.html
@@ -315,7 +315,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/1pNdQJNd9hs"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
