updated at: 2020-03-11 23:02, 【オリジナル３Dモデル】ルーシュ(Ruche) - 有坂の倉庫 - BOOTH

--- a/VRChat/45/1327045.html
+++ b/VRChat/45/1327045.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【オリジナル３Dモデル】ルーシュ(Ruche) - 有坂のちょっといいお店 - BOOTH
+      【オリジナル３Dモデル】ルーシュ(Ruche) - 有坂の倉庫 - BOOTH
     </title>
     <meta name="description" content=
     "-商品について- ■ルーシュ-Standard- 通常版衣装（画像2枚目）のルーシュとなります。素体、表情アニメーションなどが付属。DLしてすぐにVRChatにアップロードできます。 ※腕の輪っかの部分は付属しません。（データが破損したため） ■ルーシュ-SummerStyle- 夏服（画像3枚目）の特別なルーシュとなります。素体、表情アニメーションなどが付属。DLしてすぐにVRChatにアップロードできます。 ■ルーシュ用夏服(※着せ替え用、衣装データのみ) ルーシュ(Summer">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【オリジナル３Dモデル】ルーシュ(Ruche) - 有坂のちょっといいお店 - BOOTH">
+    "【オリジナル３Dモデル】ルーシュ(Ruche) - 有坂の倉庫 - BOOTH">
     <meta name="twitter:description" content=
     "-商品について- ■ルーシュ-Standard- 通常版衣装（画像2枚目）のルーシュとなります。素体、表情アニメーションなどが付属。DLしてすぐにVRChatにアップロードできます。 ※腕の輪っかの部分は付属しません。（データが破損したため） ■ルーシュ-SummerStyle- 夏服（画像3枚目）の特別なルーシュとなります。素体、表情アニメーションなどが付属。DLしてすぐにVRChatにアップロードできます。 ■ルーシュ用夏服(※着せ替え用、衣装データのみ) ルーシュ(Summer">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1ae5d9f5-29a4-4574-ab86-a316c22db92a/i/1327045/a4c8bdc2-111f-4fc5-ae1a-ea52bc9f25b3_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【オリジナル３Dモデル】ルーシュ(Ruche) - 有坂のちょっといいお店 - BOOTH">
+    "【オリジナル３Dモデル】ルーシュ(Ruche) - 有坂の倉庫 - BOOTH">
     <meta property="og:description" content=
     "-商品について- ■ルーシュ-Standard- 通常版衣装（画像2枚目）のルーシュとなります。素体、表情アニメーションなどが付属。DLしてすぐにVRChatにアップロードできます。 ※腕の輪っかの部分は付属しません。（データが破損したため） ■ルーシュ-SummerStyle- 夏服（画像3枚目）の特別なルーシュとなります。素体、表情アニメーションなどが付属。DLしてすぐにVRChatにアップロードできます。 ■ルーシュ用夏服(※着せ替え用、衣装データのみ) ルーシュ(Summer">
     <meta property="og:image" content=
@@ -119,11 +119,11 @@
                           href="https://mk22.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="有坂のちょっといいお店" class=
+                            <img alt="有坂の倉庫" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/694586/icon_image/f22b6311-80c6-4086-847d-1700573e328d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              有坂のちょっといいお店
+                              有坂の倉庫
                             </div>
                           </div></a>
                         </div>
@@ -352,7 +352,7 @@
                           "https://booth.pm/ja/items/1327045"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【オリジナル３Dモデル】ルーシュ(Ruche) | 有坂のちょっといいお店"
+                          "【オリジナル３Dモデル】ルーシュ(Ruche) | 有坂の倉庫"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
