--- a/VRChat/60/1321460.html
+++ b/VRChat/60/1321460.html
@@ -250,7 +250,8 @@
                             <iframe width="1723" height="672" src=
                             "https://www.youtube.com/embed/Ay4-oM7FRKA"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
