--- a/VRChat/29/1321429.html
+++ b/VRChat/29/1321429.html
@@ -250,7 +250,8 @@
                             <iframe width="1185" height="622" src=
                             "https://www.youtube.com/embed/yFkP9PK3yzw"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
