updated at: 2020-03-11 23:11, リネなんとか2のザケなんとかパーティクル - やな板金有限公司 - BOOTH

--- a/VRChat/98/1319998.html
+++ b/VRChat/98/1319998.html
@@ -231,7 +231,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/3lgpyfnF8rg"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
