--- a/VRChat/07/1315907.html
+++ b/VRChat/07/1315907.html
@@ -245,7 +245,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/WD3x7inKxG8"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -254,7 +255,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/7sN4cAmXopE"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
