updated at: 2020-03-11 23:25, [3Dモデル]ヴィンテージオシロスコープ - にゃこめのガレージ - BOOTH

--- a/VRChat/26/1315426.html
+++ b/VRChat/26/1315426.html
@@ -300,7 +300,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/WeEqZ-YmeTo"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -309,7 +310,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/N1fwRm--5FE"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
