--- a/VRChat/28/1312028.html
+++ b/VRChat/28/1312028.html
@@ -299,7 +299,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/md34kuOhZvg"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
