--- a/VRChat/74/1310574.html
+++ b/VRChat/74/1310574.html
@@ -387,7 +387,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/VxU6CzzOmQk"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
