updated at: 2020-03-11 23:38, スクール水着 - Atreides System - BOOTH

--- a/VRChat/22/1309422.html
+++ b/VRChat/22/1309422.html
@@ -244,7 +244,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/7PVik4xadoI"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -253,7 +254,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/HjDf4DH-4Qs"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -262,7 +264,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/n_Z_OL3KmBU"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
