--- a/VRChat/78/1298178.html
+++ b/VRChat/78/1298178.html
@@ -536,7 +536,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/Peb-vJHQX70"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -545,7 +546,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/i6k1f_5CfCo"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -554,7 +556,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/fqlZ_ZOF540"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -563,7 +566,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/xteyShZHhmc"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
